# mcserver

./: Cargo.toml
nbt/: Cargo.toml  README.md
nbt/src/: iterator.rs  lib.rs  marker.rs  node.rs  parse.rs  tag.rs  value.rs  visitor.rs
nbt/src/serde/: de.rs  error.rs  mod.rs  ser.rs
packet/: Cargo.toml
packet-derive/: Cargo.toml
packet-derive/src/: lib.rs
packet/src/: client.rs  lib.rs  server.rs
protocol/: Cargo.toml
protocol-derive/: Cargo.toml
protocol-derive/src/: lib.rs
protocol/src/: buf.rs  identifier.rs  lib.rs  text.rs
server/: Cargo.toml
server-assets/: Cargo.toml  gen_registries.py
server-assets/src/: lib.rs  registries.rs
server-assets/src/assets/: registries.json
server-macros/: Cargo.toml
server/src/: connection.rs  lib.rs  main.rs  packet_handler.rs
server/src/packet/: mod.rs
src/: connection.rs  lib.rs  main.rs  packet.rs  types.rs
src/packet/: client.rs  mod.rs  server.rs
