[package]
name = "mcserver"
version = "0.1.0"
edition = "2021"

[dependencies]
ambassador = "0.4.1"
bytes = "1.7.1"
derive_more = { version = "1.0.0", features = ["from"] }
enum_delegate = "0.2.0"
num-derive = { git = "https://github.com/okamt/num-derive" }
num-traits = "0.2.19"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
