[package]
name = "nbt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
bytes = "1.7.1"
once_map = { git = "https://github.com/okamt/once_map" }
self_cell = "1.0.4"
simd_cesu8 = "1.0.1"
thiserror = "1.0.63"

serde = { version = "1.0.210", optional = true }
itoa = { version = "1.0.11", optional = true }
byteorder = { version = "1.5.0", optional = true }

[features]
serde = ["dep:serde", "dep:itoa", "dep:byteorder"]

[dev-dependencies]
flate2 = "1.0.33"
