[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
bytes = "1.7.1"
getset = "0.1.2"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
protocol-derive = { path = "../protocol-derive" }
serde_json = "1.0.128"
num_enum = "0.7.3"
#cowext = { git = "https://github.com/okamt/cowext" }
enum-map = "2.7.3"
cowext = { path = "../../cowext" }
rgb = "0.8.50"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
derive_more = { version = "1.0.0", features = ["from"] }
ownable = "0.6.2"

[dev-dependencies]
nbt = { path = "../nbt", features = ["serde"] }
serde_path_to_error = "0.1.16"
