[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
packet = { path = "../packet" }
protocol = { path = "../protocol" }
server-assets = { path = "../server-assets" }
futures = "0.3.30"
anyhow = "1.0.89"
